# atcoder

./: .gitignore  Makefile  README.md  copy.sh  main.cpp
_result/_abc049/c/: main.cpp
_result/_abc081/a/: main.cpp
_result/_abc081/b/: main.cpp
_result/_abc083/a/: main.cpp
_result/_abc083/b/: main.cpp
_result/_abc085/c/: main.cpp
_result/_abc086/a/: main.cpp
_result/_abc086/b/: main.cpp
_result/_abc087/a/: main.cpp
_result/_abc087/b/: main.cpp
_result/_abc088/a/: main.cpp
_result/_abc088/b/: main.cpp
_result/_abc329/a/: main.cpp
_result/_abc329/b/: main.cpp
_result/_abc330/a/: main.cpp
_result/_abc330/b/: main.cpp
_result/_abc331/a/: main.cpp
_result/_abc331/b/: main.cpp
_result/_abc332/a/: main.cpp
_result/_abc332/b/: main.cpp
_result/_abc333/a/: main.cpp
_result/_abc333/b/: main.cpp
_result/_abc334/a/: main.cpp
_result/_abc334/b/: main.cpp
_result/_abc335/a/: main.cpp
_result/_abc335/b/: main.cpp
_result/_abc335/c/: main.cpp
_result/_abc336/a/: main.cpp
_result/_abc336/b/: main.cpp
_result/_abc338/a/: main.cpp
_result/_abc338/b/: main.cpp
_result/_abc339/a/: main.cpp
_result/_abc339/b/: main.cpp
abc/295/: .a.cpp.swp  .b.cpp.swp  a.cpp  b.cpp
abc/296/: .a.cpp.swp  .b.cpp.swp  .c.cpp.swp  a.cpp  b.cpp  c.cpp
abc/297/: .b.cpp.swp  a.cpp  b.cpp
abc/training/: a  a.cpp  script.sh
copy/: CMakeLists.txt
copy/.cache/clangd/index/: c.cpp.147B3A4D3DB45284.idx  d.cpp.AC7F4361D2BC19F7.idx
shell/: base.sh  download.sh  downloadurl.sh  movefile.sh  movefilecontest.sh  run.sh  submit.sh  submiturl.sh  test.sh
(+5 files in other folders)
