cmake_minimum_required(VERSION 3.26.2)
project(Atcoder)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(problem_a a.cpp)
add_executable(problem_b b.cpp)
add_executable(problem_c c.cpp)
add_executable(problem_d d.cpp)
add_executable(problem_e e.cpp)
add_executable(problem_f f.cpp)
